<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"

            android:title="@string/login" />
        <item
            android:id="@+id/nav_create_an_account"

            android:title="@string/create_account" />

    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_sharks_and_judgments"

                android:title="@string/shark" />
            <item
                android:id="@+id/nav_privacy_policy"

                android:title="@string/privacy" />
        </menu>
    </item>

</menu>
