<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/create"
        android:textColor="#000"
        android:textSize="18dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/meesage"
        android:textAlignment="center"
        android:textColor="@color/gray_300"
        android:textSize="16dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt2"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp"
        app:cardElevation="6dp">

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt2"
            android:background="@drawable/bg_edittext"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress"
            android:textColorHint="@color/gray_50"

            />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        app:cardElevation="6dp">

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/bg_edittext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/gray_50" />


    </androidx.cardview.widget.CardView>

    <CheckBox
        android:id="@+id/checkbox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/card2"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"

        android:text="@string/accept"

        android:textColor="@color/colorAccent"


        />

    <CheckBox
        android:id="@+id/checkbox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"

        android:text="@string/recviveٍ"

        android:textColor="@color/colorAccent"


        />

    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox2"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray_50"
        android:enabled="false"
        android:text="@string/create_account"
        android:textAllCaps="false"

        />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/btn_create_account"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/login_button"
        android:layout_marginTop="70dp"
        android:background="@color/gray_300"

        />

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:autoLink="all"
        android:linksClickable="true"
        android:text="@string/login_with_account"
        android:textColor="#000"
        android:textColorLink="@color/colorAccent"
        android:textSize="18dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_login1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/txt_login"

        android:onClick="gotoLogin"
        android:shadowColor="@color/gray_300"
        android:text="@string/login"
        android:textColor="@color/colorAccent"
        android:textSize="18dp"
        android:textStyle="bold" />
</RelativeLayout>


</ScrollView>