<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_25sdp"
            android:text="@string/login_with_account"
            android:textColor="#000"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt1"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/meesage"
            android:textAlignment="center"
            android:textColor="@color/gray_300"
            android:textSize="16dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt2"
            android:layout_marginStart="15dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="15dp"
            app:cardElevation="7dp">

            <EditText
                android:id="@+id/ed_email_s"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt2"
                android:background="@drawable/bg_edittext"
                android:hint="@string/email"
                android:inputType="textWebEmailAddress"
                android:textColorHint="@color/gray_50"

                />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card1"
            android:layout_marginStart="15dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="15dp"
            app:cardElevation="7dp">

            <EditText
                android:id="@+id/ed_password_s"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/bg_edittext"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/gray_50" />


        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/btn_create_account_s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card2"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:background="@color/gray_50"
            android:enabled="false"
            android:text="@string/login"
            android:textAllCaps="false"

            />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_create_account_s"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <View
            android:id="@+id/view_s"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/login_button_s"
            android:layout_marginTop="70dp"
            android:background="@color/gray_300"

            />

        <TextView
            android:id="@+id/txt_login_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_s"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="20dp"
            android:autoLink="all"
            android:linksClickable="true"
            android:text="@string/dont"
            android:textColor="#000"
            android:textColorLink="@color/colorAccent"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_login1_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_s"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/login_button_s"

            android:onClick="gotoSignUp"
            android:shadowColor="@color/gray_300"
            android:text="@string/signUp"
            android:textColor="@color/colorAccent"
            android:textSize="18dp"
            android:textStyle="bold"
            tools:ignore="KeyboardInaccessibleWidget" />
    </RelativeLayout>



</ScrollView>