<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"

            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_60sdp"
            android:contentDescription="@string/profile"
            android:src="@drawable/profile"

            />

        <TextView
            android:id="@+id/txt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_profile"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/name2"
            android:textColor="#fff"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt3"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/email2"
            android:textColor="#fff"
            android:textSize="@dimen/_18sdp" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_profile"
            android:layout_marginStart="@dimen/_15sdp"

            android:layout_marginTop="@dimen/_30sdp"
            android:layout_toEndOf="@id/txt3"


            android:textColor="@color/colorAccent"

            android:textSize="18dp" />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_name"
            android:layout_marginStart="@dimen/_70sdp"

            android:layout_marginTop="@dimen/_15sdp"
            android:layout_toEndOf="@id/txt3"


            android:textColor="@color/colorAccent"

            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_preferd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_email"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_40sdp"

            android:layout_marginEnd="@dimen/_25sdp"
            android:background="@color/colorAccent"
            android:onClick="gotoPreferd"
            android:text="@string/preferd"
            android:textAllCaps="false"

            />

        <Button
            android:id="@+id/btn_Logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@id/btn_preferd"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_140sdp"
            android:background="@color/colorAccent"
            android:onClick="logout"
            android:text="@string/logout"
            android:textAllCaps="false"


            />
    </RelativeLayout>


</ScrollView>