<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VideoPlayMain2Activity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <ImageButton
                style="@android:style/Widget.Holo.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/movie"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:onClick="back"
                android:src="@drawable/ic_arrow_back_black_24dp" />

            <ImageButton
                style="@android:style/Widget.Holo.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/movie"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:onClick="back"
                android:src="@drawable/ic_close_black_24dp" />

            <TextView
                android:id="@+id/txt_n2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="name"
                android:textColor="#ffff"
                android:textSize="20dp"
                android:textStyle="bold" />


        </RelativeLayout>
    </FrameLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/mPlayerView"

        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/frame2"
                android:layout_width="match_parent"
                android:layout_height="140dp"

                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/btn_share"
                        style="@android:style/Widget.Holo.ImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/movie"
                        android:layout_marginTop="80dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ic_share_black_24dp"

                        />

                    <ImageButton
                        android:id="@+id/btn_add"
                        style="@android:style/Widget.Holo.ImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/todo"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="80dp"


                        android:layout_marginEnd="60dp"
                        android:src="@drawable/ic_add_black_24dp"

                        />

                    <Switch
                        android:id="@+id/swittch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="8dp" />

                    <TextView
                        android:id="@+id/txt_name2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp" android:layout_centerVertical="true"
                        android:text="name"
                        android:textColor="#ffff"
                        android:textSize="18sp" />


                    <TextView
                        android:id="@+id/txt_non"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="4dp"
                        android:layout_toStartOf="@id/swittch"
                        android:text="@string/advertisement"
                        android:textColor="#ffff"
                        android:textSize="16dp" />


                </RelativeLayout>


            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/frame2">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rec_trailer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fitsSystemWindows="true" />


                </RelativeLayout>


            </FrameLayout>
        </RelativeLayout>
    </ScrollView>

    <View
        android:id="@+id/vs"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:visibility="invisible" />

    <com.google.android.exoplayer2.ui.PlayerView

        android:id="@+id/mPlayerView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/frame"
        android:background="#A6000000"
        app:controller_layout_id="@layout/exo_playback_control_view"
        app:player_layout_id="@layout/exo_simple_player_view"
        app:repeat_toggle_modes="none"
        app:resize_mode="fixed_height"
        app:show_timeout="45000"
        app:surface_type="texture_view" />
</RelativeLayout>


</ScrollView>